--- a/Proyecto_r.Rmd
+++ b/Proyecto_r.Rmd
@@ -2,4 +2,104 @@
 title: "R Notebook"
 output: html_notebook
 ---
+La sepsis ocasiona en el mundo más de mil muertes cada día, muchos de estos 
+pacientes adquieren la infección estando hospitalizados y constituye la 
+complicación intrahospitalaria más frecuente. La infección de pacientes por las 
+manos contaminadas del personal de salud es una de las formas de diseminación de
+los agentes infecciosos. La higiene de las manos es el factor individual más 
+importante para el control de las infecciones, es difícil entender que un hecho 
+tan rutinario en la práctica de la medicina, como lavarse las manos previo a 
+examinar a un paciente, haya causado tanta controversia en la época de 1800.
 
+A principios de la década de 1840 se descubrió una enfermedad mortal que 
+afectaba a las mujeres que acababan de dar a luz, cerca del 10% de las mujeres 
+morían a causa de esta enfermedad y el origen provenía de las manos contaminadas
+del personal médico que atendía los partos.
+
+En este proyecto, vamos a analizar los datos que demuestran la importancia del 
+lavado de manos, identificando anomalías en los procedimientos médicos.
+
+1. Conociendo los datos
+
+```{r}
+#1.1. Cargamos el paquete tidyverse
+library(tidyverse)
+
+#1.2. Leemos el archivo deaths_handwashing.csv usando read_csv y lo asignamos a
+#     la variable yearly
+yearly <- read_csv("deaths_handwashing.csv")
+
+#1.3. Imprimimos la variable yearly
+print(yearly)
+```
+
+2. El alarmante número de muertes
+
+   La tabla anterior muestra el número de mujeres que dieron a luz durante los 
+   años 1841 a 1846 en una ciudad al noreste de Austria, en dos clínicas en 
+   particular. Notará que dar a luz era muy peligroso; un número alarmante de 
+   mujeres murió como resultado del parto. Vemos esto con mayor claridad si 
+   observamos la proporción de muertes con respecto al número de mujeres que 
+   dieron a luz.
+
+```{r}
+#2.1. Usamos mutate para agregar la columna proportion_deaths a yearly, esta
+#     nueva columna calculará la proporción de muertes por numero de 
+#     nacimientos. 
+yearly <- yearly %>%
+  mutate(proportion_deaths = deaths / births)
+
+#2.2. Imprimimos yearly
+print(yearly)
+```
+
+3. Muerte en las clínicas
+
+   Si ahora graficamos la proporción de muertes tanto en la clínica 1 como en la
+   clínica 2, veremos un patrón curioso.
+
+```{r}
+#3.1. Usamos ggplot para hacer una gráfica lineal de proportion_deaths por año
+#     (columna year) con una línea por clínica.
+ggplot(yearly, aes(x=year, y= proportion_deaths, group = clinic, shape = clinic)) +
+  geom_line() +
+  geom_point()
+```
+
+```{r}
+#3.2. Las lineas deben tener colores distintos.
+ggplot(yearly, aes(x=year, y= proportion_deaths, color = clinic)) +
+  geom_line() 
+```
+
+4. Comienza el lavado de manos
+   
+   ¿Por qué la proporción de muertes es mucho más alta en la Clínica 1? 
+   La única diferencia en ambas clínicas era que muchos estudiantes de medicina 
+   trabajaban en la Clínica 1, mientras que en la Clínica 2 no habían tantos. 
+   Otro dato interesante es que los médicos que atendían partos solo se 
+   encargaban de esa función, mientras que los estudiantes también pasaban 
+   tiempo en las salas de autopsias examinando cadáveres.
+   
+   Se empezó a sospechar que algo en los cadáveres, propagado de las manos de 
+   los estudiantes de medicina, causaba la enfermedad. Entonces, en un intento 
+   desesperado por detener las altas tasas de mortalidad, se decretó: ¡Lávese 
+   las manos en todo momento!
+
+```{r}
+#4.1. Cargamos los datos mensuales de la Clínica 1 para ver si el lavado de 
+#     manos tuvo algún efecto, para esto lea el archivo deaths_clinic_1.csv y 
+#     lo asígamos a la variable monthly.
+monthly <- read_csv("deaths_clinic_1.csv")
+monthly
+
+#4.2. Agregamos la columna proportion_deaths a monthly, esta nueva columna se
+#     calculará como la proporción de muertes por número de nacimientos.
+monthly <- monthly %>%
+  mutate(proportion_deaths = deaths/births)
+
+#4.3. Imprimimos las primeras filas de monthly usando la función head().
+head(monthly)
+```
+   
+   
